# insight

./: .gitignore  CLAUDE.md  README.md  backlog.md  pyproject.toml  requirements.txt
.beads/: config.yaml
.claude/agents/: document-analyst.md  web-researcher.md
.claude/commands/: analyze.md  baseline.md  conclude.md  deploy.md  discuss.md  ingest.md  kb.md  research.md  session-writeup.md  status.md  synthesize.md
.github/workflows/: hugo.yml
design/: analyzer.md  collector.md  knowledge-graph.md  presenter.md  product-vision.md  release-plan.md  v2-architecture.md  ways-of-working.md
design/decisions/: 001-kuzu-graph-database.md  README.md
design/specs/: analyzer.md  collector.md  graph-schema.md  presenter.md
docs/: index.html
docs/_app/: version.json
docs/css/: style.css
docs/data/: findings.json  insights.json  sources.json  stats.json  topics.json
docs/js/: app.js
insight/: __init__.py  graph.py
knowledge-base/: README.md
scripts/: audit-claims.py  baseline-search.py  build-conclusions-data.py  build-dashboard-data.py  build-extracts.py  build-findings-data.py  build-insights-data.py  build-overview.py  build-sources-data.py  build-stats-data.py  build-topics-data.py  build-usecases-data.py  build.sh  check-progress.py  fresh-extract.py  link-extracts-to-claims.py  load-analysis-to-graph.py  migrate-v1-sources.py  prepare-alignment.py  reextract-pdfs.py  scrape-sources.py  segment-local.py  segment-source.py  status.py
site/: STYLEGUIDE.md  backlog.md  hugo.toml  package-lock.json  package.json  svelte.config.js
site/src/lib/: types.ts  (+2 more)
(+435 files in other folders)
