[project]
name = "insight"
version = "2.0.0-dev"
description = "Knowledge graph-powered research analysis system"
requires-python = ">=3.9"

dependencies = [
    "kuzu>=0.11",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "youtube-transcript-api>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
insight-collector = "insight.collector.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require network access or external services",
]
addopts = "-m 'not integration' --tb=short"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
